<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.5</version>
        <relativePath/>
    </parent>

    <groupId>com.bcn.asapp</groupId>
    <artifactId>asapp-parent</artifactId>
    <version>0.4.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>asapp-parent</name>
    <description>ASAPP parent project</description>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>attrigo</id>
            <name>attrigo</name>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/attrigo/asapp.git</connection>
        <developerConnection>scm:git:https://github.com/attrigo/asapp.git</developerConnection>
        <url>https://github.com/attrigo/asapp</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <!-- Main Properties -->
        <java.version>25</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Dependencies Versions -->
        <!-- # Test Dependencies -->
        <!-- ## Other Dependencies -->
        <archunit.version>1.4.1</archunit.version>
        <!-- # CVE Dependencies (Overrides SB4 BOM) -->
        <jackson-bom.version>3.1.1</jackson-bom.version>

        <!-- Plugins Versions -->
        <git-build-hook-maven-plugin.version>3.5.0</git-build-hook-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
        <pitest-maven.version>1.23.0</pitest-maven.version>
        <pitest-junit5-plugin.version>1.2.3</pitest-junit5-plugin.version>
        <spotless-maven-plugin.version>3.4.0</spotless-maven-plugin.version>

        <!-- Profiles Flags -->
        <jacoco.skip>true</jacoco.skip>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <maven.source.skip>true</maven.source.skip>
        <spotless.check.skip>true</spotless.check.skip>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- # Test Dependencies -->
            <!-- ## Org Dependencies -->
            <dependency>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-junit5-plugin</artifactId>
                <version>${pitest-junit5-plugin.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- ## Other Dependencies -->
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- # Maven Plugins -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>javadoc-no-fork</goal>
                            </goals>
                            <configuration>
                                <doclint>all,-missing</doclint> <!-- Ignores missing comments -->
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- # Org Plugins -->
                <plugin>
                    <groupId>org.pitest</groupId>
                    <artifactId>pitest-maven</artifactId>
                    <version>${pitest-maven.version}</version>
                    <configuration>
                        <mutationThreshold>100</mutationThreshold>
                    </configuration>
                </plugin>

                <!-- # Other plugins -->
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless-maven-plugin.version}</version>
                    <configuration>
                        <lineEndings>UNIX</lineEndings>
                        <java>
                            <includes>
                                <include>src/main/java/**/*.java</include>
                                <include>src/test/java/**/*.java</include>
                            </includes>
                            <eclipse>
                                <version>4.35</version>
                                <file>asapp_formatter.xml</file>
                            </eclipse>
                            <importOrder>
                                <order>java|javax,org,com,,com.bcn</order>
                            </importOrder>
                            <removeUnusedImports/>
                            <licenseHeader>
                                <file>header-license</file>
                                <delimiter>package </delimiter>
                            </licenseHeader>
                        </java>
                    </configuration>
                    <executions>
                        <execution>
                            <id>check-code-style</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>com.rudikershaw.gitbuildhook</groupId>
                    <artifactId>git-build-hook-maven-plugin</artifactId>
                    <version>${git-build-hook-maven-plugin.version}</version>
                    <configuration>
                        <installHooks>
                            <pre-commit>git/hooks/pre-commit</pre-commit>
                            <commit-msg>git/hooks/commit-msg</commit-msg>
                        </installHooks>
                    </configuration>
                    <executions>
                        <execution>
                            <id>add-git-hooks</id>
                            <goals>
                                <goal>install</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <module>libs</module>
        <module>services</module>
    </modules>

    <profiles>
        <profile>
            <id>ci</id>
            <properties>
                <spotless.check.skip>false</spotless.check.skip>
            </properties>
        </profile>
        <profile>
            <id>full</id>
            <properties>
                <jacoco.skip>false</jacoco.skip>
                <maven.javadoc.skip>false</maven.javadoc.skip>
                <maven.source.skip>false</maven.source.skip>
                <spotless.check.skip>false</spotless.check.skip>
            </properties>
        </profile>
    </profiles>

</project>
